#146GET backend on Angular App init to updateDB

--- a/src/app/news/components/display-news/display-news.component.css
+++ b/src/app/news/components/display-news/display-news.component.css
@@ -8,6 +8,9 @@ a:active, a:hover {
   color: #ee495f;
   text-decoration: none; }
 
+.center {
+  text-align: center; }
+
 .news-container {
   margin: 8px 30px;
   padding: 8px;
