--- a/src/app/news/components/display-news/display-news.component.scss
+++ b/src/app/news/components/display-news/display-news.component.scss
@@ -16,6 +16,10 @@ a:active, a:hover {
   text-decoration: none;
 }
 
+.center {
+  text-align: center;
+}
+
 .news-container {
   margin: 8px 30px;
   padding: 8px;
