--- a/src/app/news/components/today-news/today-news.component.html
+++ b/src/app/news/components/today-news/today-news.component.html
@@ -1,1 +1,7 @@
+<ng-container *ngIf="!todayNews.length">
+  <div class="container">
+    <h6 class="center">Nie ma dzisiejszych wiadomości! Sprawdź <b><a routerLink="all">wszystkie wiadomości!</a></b> </h6>
+  </div>
+</ng-container>
 <app-display-news [news]="todayNews" ></app-display-news>
+
