--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,4 +1,11 @@
-
+<div class="row pt-5" *ngIf="!authService.authFlag">
+  <div class="col-6 mx-auto error-msg">
+    <ng-container *ngIf="authService.statusCode.value === 401">
+      <i class="fas fa-exclamation-circle"></i> Niepoprawne dane logowania!
+    </ng-container>
+    <a class="close-x" (click)="closeErrorMessage()"></a>
+  </div>
+</div>
 <div class="row pt-5">
   <div class="col-6 mx-auto">
     <h3 class="pb-4">Logowanie</h3>
