--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,3 +1,11 @@
+<div class="row pt-5" *ngIf="!authService.authFlag">
+  <div class="col-6 mx-auto error-msg">
+    <ng-container *ngIf="authService.statusCode.value === 409">
+      <i class="fas fa-exclamation-circle"></i> Istnieje konto powiązane z podanym adresem email!
+    </ng-container>
+    <a class="close-x" (click)="closeErrorMessage()"></a>
+  </div>
+</div>
 
 <div class="row pt-5">
   <div class="col-6 mx-auto">
@@ -5,13 +13,19 @@
     <form [formGroup]="registerForm">
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="text" formControlName="email" id="email" class="form-control">
-
+        <input type="text" formControlName="email" id="email" class="form-control" ngModel [email]="true">
+        <app-display-message
+          [displayError]="isFieldInvalid('email')"
+          errorMsg="Podaj poprawny adres email!">
+        </app-display-message>
       </div>
       <div class="form-group">
         <label for="password">Hasło</label>
         <input type="password" formControlName="password" id="password" class="form-control">
-
+        <app-display-message
+          [displayError]="isFieldInvalid('password')"
+          errorMsg="Podaj hasło składające się z przynajmniej sześciu znaków!">
+        </app-display-message>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary btn-block" [disabled]="(!registerForm.valid)" (click)="onSubmit()"> Zarejestruj </button>
