#150 toggle user favorites news -> @cezlos help!

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-navigation></app-navigation>
-
+<span id="return-to-top">
+	<i id="back-to-top-arrow" class="fas fa-arrow-circle-up invisible" (click)="backToTop()" ></i>
+</span>
 <div class="content">
   <router-outlet></router-outlet>
 </div>
