--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -13,7 +13,7 @@
     <form [formGroup]="registerForm">
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="text" formControlName="email" id="email" class="form-control" ngModel [email]="true">
+        <input type="text" formControlName="email" id="email" class="form-control" [email]="true">
         <app-display-message
           [displayError]="isFieldInvalid('email')"
           errorMsg="Podaj poprawny adres email!">
