--- a/src/app/news/components/favorites/favorites.component.html
+++ b/src/app/news/components/favorites/favorites.component.html
@@ -13,6 +13,13 @@
     </div>
   </ng-container>
   <ng-container *ngIf="!!favorites.length === true">
+    <ng-container *ngIf="(favorites.length > 1)">
+      <div class="container">
+        <div class="delete-favs-btn">
+         <button type="submit" class="btn btn-outline-danger btn-sm" (click)="handleDeleteAllFavorites()">usuń wszystko z ulubionych</button>
+        </div>
+      </div>
+    </ng-container>
     <app-display-news [news]="favorites" ></app-display-news>
   </ng-container>
 </ng-container>
