--- a/src/app/news/components/favorites/favorites.component.scss
+++ b/src/app/news/components/favorites/favorites.component.scss
@@ -8,3 +8,20 @@ i {
   opacity: 0.5;
   cursor: pointer;
 }
+
+.delete-favs-btn {
+  margin: 8px 30px;
+}
+
+.btn-outline-danger {
+  display: block;
+  margin-left: auto;
+  opacity: 0.7
+}
+
+.btn-outline-danger:hover {
+  opacity: 1;
+  color: #dc3545;
+  border-color: #dc3545;
+  background-color: #D3D0CB;
+}
