#176 Add sorting ALL NEWS by source feature (ng-multiselect-dropdown)

--- a/src/app/news/components/all-news/all-news.component.html
+++ b/src/app/news/components/all-news/all-news.component.html
@@ -1,7 +1,4 @@
-<ng-container *ngIf="!allNews || (!!allNews.length === false)">
-  <app-spinner></app-spinner>
-</ng-container>
 <ng-container *ngIf="!!allNews">
-  <app-display-news [news]="allNews" ></app-display-news>
+  <app-sources-multi-select-dropdown [news]="allNews" (sources)="updateNewsBySourcesNames($event)"></app-sources-multi-select-dropdown>
 </ng-container>
 
