--- a/src/app/news/components/favorites/favorites.component.scss
+++ b/src/app/news/components/favorites/favorites.component.scss
@@ -19,9 +19,9 @@ i {
   opacity: 0.7
 }
 
-.btn-outline-danger:hover {
+.btn.btn-outline-danger.btn-sm:hover {
   opacity: 1;
-  color: #dc3545;
+  color: #ffffff;
   border-color: #dc3545;
-  background-color: #D3D0CB;
+  background-color: #dc3545;
 }
