--- a/src/app/news/components/sources-multi-select-dropdown/sources-multi-select-dropdown.component.html
+++ b/src/app/news/components/sources-multi-select-dropdown/sources-multi-select-dropdown.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="!newsSourcesNames.length">
+<ng-container *ngIf="!newsSourcesNames">
   <app-spinner></app-spinner>
 </ng-container>
 
