#179 Filter (all)news by date range (and sources) using datetimepicker

--- a/src/app/news/components/all-news/all-news.component.html
+++ b/src/app/news/components/all-news/all-news.component.html
@@ -1,4 +1,2 @@
-<ng-container *ngIf="!!allNews">
-  <app-sources-multi-select-dropdown [news]="allNews" (sources)="updateNewsBySourcesNames($event)"></app-sources-multi-select-dropdown>
-</ng-container>
+  <app-filters></app-filters>
 
