--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -19,7 +19,9 @@
         <input type="password" formControlName="password" id="password" class="form-control">
       </div>
       <div class="form-group">
-        <button type="submit" class="btn btn-primary btn-block" [disabled]="(!registerForm.valid)" (click)="onSubmit()">Zaloguj</button>
+        <button type="submit" class="btn btn-primary btn-block" [disabled]="(!registerForm.valid)" (click)="onSubmit()">
+          Zaloguj
+        </button>
       </div>
     </form>
   </div>
