--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -28,10 +28,14 @@
         </app-display-message>
       </div>
       <div class="form-group">
-        <button type="submit" class="btn btn-primary btn-block" [disabled]="(!registerForm.valid)" (click)="onSubmit()"> Zarejestruj </button>
+        <button type="submit" class="btn btn-primary btn-block" [disabled]="(!registerForm.valid)" (click)="onSubmit()">
+          Zarejestruj
+        </button>
       </div>
       <div class="form-group">
-        <button type="submit" class="btn btn-outline-secondary btn-block" [hidden]="!registerForm.dirty" (click)="reset()">Wyczyść formularz</button>
+        <button type="submit" class="btn btn-outline-secondary btn-block" [hidden]="!registerForm.dirty"
+                (click)="reset()">Wyczyść formularz
+        </button>
       </div>
     </form>
   </div>
