--- a/src/app/news/components/display-news/display-news.component.css
+++ b/src/app/news/components/display-news/display-news.component.css
@@ -58,13 +58,38 @@ i {
   margin: 0 8px;
   cursor: pointer; }
 
-.thumbnail {
+.thumbnail-pre {
+  position: absolute;
+  display: block;
+  width: 80%;
+  max-width: 1140px;
+  min-width: 300px;
+  height: 50vh;
+  margin: 0 auto;
+  z-index: 307; }
+
+.display-none {
+  display: none; }
+
+.thumbnail-container {
   width: 100%;
+  height: 50px;
   text-align: right; }
-  .thumbnail img {
+  .thumbnail-container span img.thumbnail {
+    z-index: 0;
     max-height: 50px;
     border: 2px solid #7a5656; }
-  .thumbnail img:hover {
-    border: 2px solid #ee495f; }
+  .thumbnail-container span .thumbnail-preview {
+    display: none; }
+  .thumbnail-container span img.thumbnail:hover + .thumbnail-preview,
+  .thumbnail-container span img.thumbnail:focus + .thumbnail-preview {
+    display: flex;
+    position: fixed;
+    top: 20vh;
+    left: 25vw;
+    width: 50vw;
+    max-width: 50vw;
+    height: auto;
+    z-index: 2; }
 
 /*# sourceMappingURL=display-news.component.css.map */
