--- a/src/app/news/components/display-news/display-news.component.scss
+++ b/src/app/news/components/display-news/display-news.component.scss
@@ -79,16 +79,48 @@ i {
   cursor: pointer;
 }
 
-.thumbnail {
+.thumbnail-pre {
+  position: absolute;
+  display: block;
+  width: 80%;
+  max-width: 1140px;
+  min-width: 300px;
+  height: 50vh;
+  margin: 0 auto;
+  z-index: 307;
+}
+
+.display-none {
+  display: none;
+}
+
+.thumbnail-container {
+  //position: relative;
   width: 100%;
+  height: 50px;
   text-align:right;
 
-  img {
+  span img.thumbnail {
+    //position: relative;
+    z-index: 0;
     max-height: 50px;
     border: 2px solid $smallTextColor;
   }
 
-  img:hover {
-    border: 2px solid $activeLinkColor;
+  span .thumbnail-preview {
+    display: none;
   }
+
+  span img.thumbnail:hover + .thumbnail-preview,
+  span img.thumbnail:focus + .thumbnail-preview {
+    display: flex;
+    position: fixed;
+    top: 20vh;
+    left: 25vw;
+    width: 50vw;
+    max-width: 50vw;
+    height: auto;
+    z-index: 2;
+  }
+
 }
