--- a/src/app/news/components/display-news/display-news.component.css
+++ b/src/app/news/components/display-news/display-news.component.css
@@ -65,6 +65,8 @@ i {
   width: 100%;
   height: 50px;
   text-align: right; }
+  .thumbnail-container img {
+    cursor: pointer; }
   .thumbnail-container img.thumbnail {
     z-index: 0;
     max-height: 50px;
